--- a/frontend/src/app/components/search/search.component.html
+++ b/frontend/src/app/components/search/search.component.html
@@ -10,8 +10,8 @@
       <mat-form-field>
         <mat-label>Select Product Category</mat-label>
         <mat-select [(ngModel)]="category" (selectionChange)="navigateTo()" value="category">
-          <mat-option [value]="">None</mat-option>
-          <mat-option *ngFor="let category of categories" [value]="category.value">{{category.viewValue}}</mat-option>
+          <mat-option style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" class="option" [value]="">None</mat-option>
+          <mat-option style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" class="option" *ngFor="let category of categories" [value]="category.value">{{category.value}}</mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field>
@@ -82,8 +82,8 @@
       <mat-form-field>
         <mat-label>Select Product Category</mat-label>
         <mat-select [(ngModel)]="category" (selectionChange)="navigateTo()" value="category">
-          <mat-option class="selectPanel" [value]="">None</mat-option>
-          <mat-option class="selectPanel" *ngFor="let category of categories" [value]="category.value">{{category.viewValue}}</mat-option>
+          <mat-option style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" class="selectPanel" [value]="">None</mat-option>
+          <mat-option style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" class="selectPanel" *ngFor="let category of categories" [value]="category.value">{{category.value}}</mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field>
