--- a/frontend/src/app/components/dashboard/dashboard.component.css
+++ b/frontend/src/app/components/dashboard/dashboard.component.css
@@ -51,6 +51,14 @@ hr {
   opacity: 0.7;
   border-radius: 7px;
 }
+.center-cropped:hover {
+  object-fit: cover; /* Do not scale the image */
+  object-position: center; /* Center the image within the element */
+  height: 140px;
+  width: 140px;
+  opacity: 0.7;
+  border-radius: 7px;
+}
 
 .productList_dashboard{
 margin-top: 70px;
