--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -38,9 +38,15 @@
   font-family:'Press Start 2P', cursive !important;
 
 }
+
 ::ng-deep .mat-typography .mat-tab-group{
   font-family:'Press Start 2P', cursive;
 }
+
+::ng-deep  .mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar{
+  background-color: #F7CC18;
+
+  }
 
 ::ng-deep .mat-tab-label{
   color: white !important;
@@ -57,6 +63,13 @@
   
 }
 
+::ng-deep .mat-step-header .mat-step-icon {
+  background-color: #881DF7;  color:#EA21F7;
+}
+::ng-deep .mat-step-header .mat-step-icon-selected {
+  background-color: #F78B1E; 
+  color:#EA21F7;
+}
 .app {
     /* the .app div needs to be AT LEAST 100% of the height of the window */
     min-height: 100%;
@@ -97,4 +110,5 @@ object-fit: cover; /* Do not scale the image */
   bottom: 0;
   right: 0;
 }
+
 
