--- a/frontend/src/app/components/admin-panel/admin-panel.component.html
+++ b/frontend/src/app/components/admin-panel/admin-panel.component.html
@@ -3,41 +3,32 @@
 <mat-tab label="Users">
   <mat-list *ngFor="let user of userList">
     <mat-list-item>
-    Name: {{user.userName}}, ID:  {{user.userId}} , is Admin
-    <mat-checkbox [(ngModel)]="user.admin" (change)="upgradeUser(user)" [disabled]="user.admin" [checked]="user.admin">Admin User</mat-checkbox>
-    <button mat-flat-button color="warn" (click)="deleteUser(user)">Delete User</button>
-    </mat-list-item>
+    Name: {{user.userName}}, ID:  {{user.userId}} , is Admin&nbsp;
+    <mat-checkbox [(ngModel)]="user.admin" (change)="upgradeUser(user)" [disabled]="user.admin" [checked]="user.admin"></mat-checkbox>
+   
+    <div *ngIf="!user.admin"><button mat-flat-button color="warn" (click)="deleteUser(user)">Remove</button>
+    </div> </mat-list-item>
   </mat-list>
 </mat-tab>
 
   <mat-tab label="Products To Approve">
 
-    <mat-list *ngFor="let productItem of productList">
-      <mat-product-item [productItem] = "productItem"   ></mat-product-item>
+   
+<div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
+ 
+  <div fxFlex="10%" fxFlex.xl="10%" fxFlex.lg="15%" fxFlex.md="20%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
+    <app-product-item 
+[productItem]="productItem" >
+</app-product-item>
+<mat-card class="add_on">
+<mat-radio-group  [(ngModel)]="productItem.isApproved">
+  <mat-radio-button value="true" (click)="approveProduct(productItem)" >Approve</mat-radio-button>
+  <mat-radio-button value="false" (click)="deleteProduct(productItem)" >Delete</mat-radio-button>
+</mat-radio-group>
+</mat-card>
 
-    </mat-list>
-
-  <div  fxLayout="row" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
-    <div fxFlex="10%" fxFlex.xl="15%" fxFlex.lg="20%" fxFlex.md="25%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
-      <mat-card class="productItem_Card">
-        <mat-card-title>{{productItem.productName}} </mat-card-title>
-        <img class = "center-cropped" src="{{productItem.productImage}}" alt="{{productItem.productName}}" >
-       <mat-card-content >
-       <br>
-     {{productItem.productDescription}}
-    <br><br>
-    Posted on {{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}}
-  </mat-card-content> 
-  <mat-card-footer>
-        <mat-radio-group [(ngModel)]="productItem.isApproved">
-          <mat-radio-button value="true" (click)="approveProduct(productItem)" >Approve</mat-radio-button>
-          <mat-radio-button value="false" (click)="deleteProduct(productItem)" >Delete</mat-radio-button>
-        </mat-radio-group>
-      </mat-card-footer>
-      </mat-card>
-    
-      </div>
-    </div>
+  </div>
+</div>
 
 </mat-tab>
 </mat-tab-group>
