--- a/frontend/src/app/components/dashboard/dashboard.component.css
+++ b/frontend/src/app/components/dashboard/dashboard.component.css
@@ -48,16 +48,17 @@ hr {
   object-position: center; /* Center the image within the element */
   height: 150px;
   width: 150px;
-  opacity: 0.7;
-  border-radius: 7px;
+  opacity: 0.5;
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px #46FFFD;
 }
 .center-cropped:hover {
   object-fit: cover; /* Do not scale the image */
   object-position: center; /* Center the image within the element */
   height: 140px;
   width: 140px;
-  opacity: 0.7;
-  border-radius: 7px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px #F72871;
 }
 
 .productList_dashboard{
