--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.css
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.css
@@ -9,7 +9,8 @@
 
   
 .productItem_Card{
-  margin: 5px;
+  margin: 50px;
+  margin-right: -160px;
   box-shadow: 2px 2px 30px  #F72871;
   background-color: #082A5D;
  /* border-color: teal;
