--- a/frontend/src/app/components/user-login/user-login.component.html
+++ b/frontend/src/app/components/user-login/user-login.component.html
@@ -10,6 +10,8 @@
     </mat-form-field>
 
     <button mat-flat-button class="button_standard" (click)="login()" >Login</button>
+  <img class ="rocket"src="assets/cd/rocketOnceBlue.gif" >
+
     <br>
   </div>
 </mat-card>
@@ -18,7 +20,6 @@
       <button mat-flat-button class="button_standard" routerLink="/registration/0">Registration</button>
       <button mat-flat-button class="button_standard" (click)="openDialog()">Password forgotten</button>
   </div>
-
 
 
 
