--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -18,13 +18,15 @@ mat-toolbar{
   max-height:64px;
   height: 64px;
   color:#B82D70;
-  text-shadow: 0px 0px 3px white;
+  text-shadow: 0px 0px 2px white;
   font-family: 'Press Start 2P', cursive; 
   font-size: smaller;
+  opacity: 0.8;
 
 }
 .header{
   margin-bottom: 50px;
+  background-image: url('assets/cd/goldRain.gif');
 }
 
 .storMainColor {
@@ -54,7 +56,7 @@ div:hover span.only-show-on-hover  {
   visibility: visible;
   display: inline-block;
   color: #F7CC18;
-  font-size: 8px;
+  font-size: 9px;
   
 
 }
