--- a/frontend/src/app/components/user-dashboard/soldproducts/soldproducts.component.css
+++ b/frontend/src/app/components/user-dashboard/soldproducts/soldproducts.component.css
@@ -4,3 +4,18 @@
   width: auto;
   opacity: 0.7;
 }
+
+  
+.productItem_Card{
+  margin: 50px;
+  box-shadow: 2px 2px 30px  #F72871;
+  background-color: #082A5D;
+ /* border-color: teal;
+  border-width: 2px;*/
+  border-radius: 30px;
+  color: whitesmoke;
+  font-family:'Press Start 2P', cursive !important;
+  font-size: 7px;
+  height: 700px;
+  width: 250px;
+}
