--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.css
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.css
@@ -8,20 +8,7 @@
 
 
   
-.productItem_Card{
-  margin: 50px;
-  margin-right: -160px;
-  box-shadow: 2px 2px 30px  #F72871;
-  background-color: #082A5D;
- /* border-color: teal;
-  border-width: 2px;*/
-  border-radius: 30px;
-  color: whitesmoke;
-  font-family:'Press Start 2P', cursive !important;
-  font-size: 7px;
-  height: 500px;
-  width: 250px;
-}
+
 .mat-card-content{
   font-size: 9px;
 }
@@ -50,3 +37,25 @@
   align-self: center;
 }
 
+.add_on{
+  margin: 50px;
+  margin-top: -150px;
+  margin-left: 180px;
+  border-top: none;
+  box-shadow: 2px 2px 30px  #F72871;
+  background-color: #F78B1E;
+ /* border-color: teal;
+  border-width: 2px;*/
+  border-radius: 30px;
+  color: whitesmoke;
+  font-family:'Press Start 2P', cursive !important;
+  text-align: center;
+  font-size: 10px;
+  height: 20px;
+  width: 100px;
+ padding: 9px;
+}
+.mat-radio-group .mat-radio-button{
+  font-family:'Press Start 2P', cursive !important;
+  font-size: 10px;
+}
