--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -34,21 +34,19 @@
 </mat-tab>
 
 <mat-tab label = "Your current Products">
+  <div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
+ 
+    <div  *ngFor="let productItem of productList">
+      <app-product-item 
+  [productItem]="productItem" >
+  </app-product-item>
+  <mat-card class="add_on">
+    <mat-flat-button button (click)="deleteProduct(productItem)" >Delete</mat-flat-button>
+ 
+  </mat-card>
   
-    <div  fxLayout="line wrap"  >
-      <mat-card class="productItem_Card">
-      <div class="add_button"><button mat-flat-button class="button_standard" [routerLink]="['/productForm/', 0]" routerLinkActive="active">Add Product </button>
-      </div>
-      </mat-card> 
-<div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
-  <div fxFlex="10%" fxFlex.xl="10%" fxFlex.lg="15%" fxFlex.md="20%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
-<app-product-item  
-[productItem]="productItem" 
-></app-product-item>
+    </div>
   </div>
-    </div>
-    </div>
-
   
 </mat-tab>
 
