--- a/frontend/src/app/components/product-item/product-item.component.html
+++ b/frontend/src/app/components/product-item/product-item.component.html
@@ -10,6 +10,7 @@
 
     <mat-card-subtitle>posted on {{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}}</mat-card-subtitle>
     <br>
+    <mat-card-content> Price {{productItem.productPrice}}.- CHF </mat-card-content>
     <br>
     <hr>
     <br>
