--- a/frontend/src/app/components/product-display/product-display.component.html
+++ b/frontend/src/app/components/product-display/product-display.component.html
@@ -1,7 +1,7 @@
 <app-search></app-search>
 
 <div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
-  <div fxFlex="10%" fxFlex.xl="10%" fxFlex.lg="15%" fxFlex.md="20%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
+  <div  *ngFor="let productItem of productList">
 <app-product-item  
 [productItem]="productItem" 
 ></app-product-item>
