--- a/frontend/src/app/components/product-detail/product-detail.component.css
+++ b/frontend/src/app/components/product-detail/product-detail.component.css
@@ -1,7 +1,7 @@
 .center-cropped {
   object-fit: cover; /* Do not scale the image */
   height: 350px;
-  width: auto;
+  width: 450px;
   opacity: 0.7;
 }
 
