--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -19,6 +19,8 @@
 ::ng-deep .mat-select .mat-focused {
   /* change color of arrow */
   color: #46FFFD;
+  box-shadow:0px 0px 5px #46FFFD;
+
 }
 
 ::ng-deep .mat-checkbox .mat-checkbox-frame {
@@ -75,6 +77,9 @@
   color:#881DF7!important;
 }
 
+::ng-deep .mat-card-content{
+  font-size: 15px;
+}
 
 .app {
     /* the .app div needs to be AT LEAST 100% of the height of the window */
