--- a/frontend/src/app/components/user-dashboard/soldproducts/soldproducts.component.css
+++ b/frontend/src/app/components/user-dashboard/soldproducts/soldproducts.component.css
@@ -16,6 +16,44 @@
   color: whitesmoke;
   font-family:'Press Start 2P', cursive !important;
   font-size: 7px;
-  height: 700px;
+  height: 450px;
   width: 250px;
+}
+
+.mat-flat-button {
+  background-color:#F78B1E !important;
+  font-size: small;
+}
+
+.add_on1{
+  margin: 50px;
+  margin-left: 180px;
+  border-top: none;
+
+ 
+ 
+}
+
+.add_on{
+  box-shadow: 2px 2px 30px  #F72871;
+  background-color: #F78B1E!important;
+  border-radius: 30px;
+  color: whitesmoke;
+  font-family:'Press Start 2P', cursive !important;
+  text-align: center;
+
+  font-size: 10px;
+  height: 20px;
+  width: 100px;
+ padding: 9px;
+}
+
+.clickable:hover{
+color: #F7CC18;
+
+}
+
+.mat-card-content{
+  color: #881DF7;
+  text-shadow: 0px 0px 4px  #881DF7;
 }
