--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.css
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.css
@@ -59,3 +59,35 @@
   font-family:'Press Start 2P', cursive !important;
   font-size: 10px;
 }
+
+
+.actions{
+  margin: 30px;
+  padding:0;
+  margin-top: -170px;
+  margin-left:50px;
+  border-top: none;
+background-color:#082A5D;
+  box-shadow: none;
+  color: whitesmoke;
+  font-family:'Press Start 2P', cursive !important;
+  text-align: center;
+  height: 80px;
+  width:  250px;
+ padding: 9px;
+ display: flex;
+ flex-direction: row;
+ justify-content: right;
+}
+
+.actionsub{
+  color: whitesmoke;
+  box-shadow: 2px 2px 30px  #F72871!important;
+  background-color: #F78B1E!important;
+  font-size: 10px;
+  height: 50px;
+ font-family:'Press Start 2P', cursive !important;
+  text-align: center;
+  border-radius: 30px;
+  box-shadow: none;
+}
