added user & products to db, small fixes inclusive

--- a/frontend/src/app/components/user-registration/user-registration.component.html
+++ b/frontend/src/app/components/user-registration/user-registration.component.html
@@ -118,7 +118,7 @@
       <br>
       <mat-form-field appearance="fill">
         <mat-label>Select Gender</mat-label>
-        <mat-select matNativeControl [(ngModel)]="gender" value="gender">
+        <mat-select style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" matNativeControl [(ngModel)]="gender" value="gender">
           <mat-option style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" value="Agender">Agender</mat-option>
           <mat-option style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" value="Androgyne">Androgyne</mat-option>
           <mat-option style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" value="Androgynous">Androgynous</mat-option>
