--- a/frontend/src/app/components/productForm/productForm.component.html
+++ b/frontend/src/app/components/productForm/productForm.component.html
@@ -30,14 +30,10 @@
         <mat-card>
           <mat-form-field appearance="fill">
             <mat-label>Select Product Category</mat-label>
-            <mat-select matNativeControl [(ngModel)]="productCategory" value="productCategory">
+            <mat-select style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" matNativeControl [(ngModel)]="productCategory" value="productCategory">
               <mat-option style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" [value]="">None</mat-option>
               <mat-option style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" *ngFor="let category of categories" [value]="category.value">{{category.value}}</mat-option>
             </mat-select>
-            <select matNativeControl [(ngModel)]="productCategory" value="productCategory">
-              <option [value]="">None</option>
-              <option *ngFor="let category of categories" [value]="category.value">{{category.value}}<option>
-            </select>
           </mat-form-field>
       </mat-card>
 
@@ -145,10 +141,10 @@
         <mat-form-field appearance="fill">
 
           <mat-label>Select Product Category</mat-label>
-          <select matNativeControl [(ngModel)]="productCategory" value="productCategory" >
-            <option value="">None</option>
-            <option *ngFor="let category of categories" [value]="category.value">{{category.value}}</option>
-          </select>
+          <mat-select style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" matNativeControl [(ngModel)]="productCategory" value="productCategory" >
+            <mat-option style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" value="">None</mat-option>
+            <mat-option style="font-family:'Press Start 2P', cursive !important; font-size: x-small;" *ngFor="let category of categories" [value]="category.value">{{category.value}}</mat-option>
+          </mat-select>
         </mat-form-field>
 
 
