--- a/frontend/src/app/components/snake-component/snake-component.component.html
+++ b/frontend/src/app/components/snake-component/snake-component.component.html
@@ -36,7 +36,7 @@
   </div>
   <div class="score">
     {{ this.isValidUserHighscore() ? 'Your saved highscore is: ' + this.userHighscore
-        : 'No saved highscore, consider logging in to save highscores!' }}
+        : 'Log in to save scores!' }}
   </div>
   <div class="buttons">
     <button *ngIf="!playing" (click)="play()">PLAY</button>
