changed zip link

--- a/frontend/src/app/components/other-user-dashboard/other-user-dashboard.component.html
+++ b/frontend/src/app/components/other-user-dashboard/other-user-dashboard.component.html
@@ -2,9 +2,9 @@
   <div class="trophy_name"><img *ngIf="numberOne"class="trophy" src="assets/cd/trophy2.gif"><h2 class= "otherProfile">{{userName}}'s Profile  </h2> <img *ngIf="numberOne" class="trophy" src="assets/cd/trophy2.gif"></div>
 
 
-  <button mat-button class="clickable" [routerLink]="['/', addressPin]" routerLinkActive="active" ><mat-icon >place</mat-icon>{{addressPin}}</button>
+  <button mat-button class="clickable" [routerLink]="['/s']" [queryParams]="{z: addressPin}" routerLinkActive="active" ><mat-icon >place</mat-icon>{{addressPin}}</button>
   <br>
-  <button mat-button class="clickable" [routerLink]="['/', addressCity]" routerLinkActive="active"><mat-icon >place</mat-icon>{{addressCity}}</button>
+
   <br>
   <button mat-button class="clickable" [routerLink]="['/game']" routerLinkActive="active">Score: {{userScore}}</button>
 </mat-card>
