--- a/frontend/src/app/components/productForm/productForm.component.css
+++ b/frontend/src/app/components/productForm/productForm.component.css
@@ -49,3 +49,10 @@
   font-size: 12px;
   margin-right: 20px;
 }
+
+.center-cropped {
+  object-fit: cover; /* Do not scale the image */
+  height: 350px;
+  width: 450px;
+  opacity: 0.7;
+}
