--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -40,14 +40,9 @@
       <app-product-item
   [productItem]="productItem" >
   </app-product-item>
-<<<<<<< HEAD
   <mat-card class="actions">
     <button mat-flat-button class="actionsub" (click)="deleteProduct(productItem)" >Delete</button>
-    <button mat-flat-button  class="actionsub"  [routerLink]="['/registration/', userId]" routerLinkActive="active">Edit</button>
-=======
-  <mat-card class="add_on">
-    <mat-flat-button button (click)="deleteProduct(productItem)" >Delete</mat-flat-button>
->>>>>>> 6c7dcd1f76cb96b4c6b9a4ded897ef4f6ff33c5c
+    <button mat-flat-button  class="actionsub"  [routerLink]="['/productForm/', productItem.productId]" routerLinkActive="active">Edit</button>
 
   </mat-card>
 
