--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -24,7 +24,9 @@
   </b>
   <br>
     <br>
-
+  </div>
+  <button mat-flat-button class="button_standard" [routerLink]="['/registration/', userId]" routerLinkActive="active">Edit Profile</button>
+  <div>
 
 </div>
   </mat-card-content>
