sold/bought more visible on product

--- a/frontend/src/app/components/product-item/product-item.component.css
+++ b/frontend/src/app/components/product-item/product-item.component.css
@@ -70,3 +70,15 @@
   .mat-card-footer{
       margin-left: 5px;
   }
+
+  .available{
+font-size: 12px;
+color:#F72871;
+text-shadow: 0px 0px 4px #F72871;
+  }
+
+  .sold{
+font-size:12px;
+color: #46FFFD ;
+text-shadow: 0px 0px 4px#46FFFD;
+  }
